api.modev-photography.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modev-photography
spec:
  selector:
    matchLabels:
      app: modev-photography
  replicas: 1
  template:
    metadata:
      labels:
        app: modev-photography
        run: modev-photography-run
    spec:
      containers:
        - name: mo-dev-photography
          image: mohammaddev/mo_dev_photography:latest
          resources: {}
          imagePullPolicy: Always
          ports:
            - containerPort: 6003
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: modev-photography
  labels:
    run: modev-photography-run
spec:
  ports:
    - port: 80
      targetPort: 6003
      protocol: TCP
  selector:
    run: modev-photography-run
