api.modev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modev-auth
spec:
  selector:
    matchLabels:
      app: modev-auth
  replicas: 1
  template:
    metadata:
      labels:
        app: modev-auth
        run: modev-auth-run
    spec:
      containers:
        - name: mo-dev-auth
          image: mohammaddev/mo_dev_auth:latest
          resources: {}
          imagePullPolicy: Always
          ports:
            - containerPort: 6001
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: modev-auth
  labels:
    run: modev-auth-run
spec:
  ports:
    - port: 80
      targetPort: 6001
      protocol: TCP
  selector:
    run: modev-auth-run
