nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
        lbgroup: millionwatts
        run: nginx-run
    spec:
      containers:
        - name: millionwatts-nginx
          image: millionwatts/nginx:latest
          resources: {}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    run: nginx-run
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: nginx-run
